--- a/CALENDAR/CALENDAR.vcxproj
+++ b/CALENDAR/CALENDAR.vcxproj
@@ -148,6 +148,9 @@
     <ClInclude Include="SaveLoadToDo.h" />
     <ClInclude Include="SearchToDo.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Base.bin" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
