--- a/CALENDAR/CALENDAR.vcxproj.filters
+++ b/CALENDAR/CALENDAR.vcxproj.filters
@@ -36,4 +36,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Base.bin">
+      <Filter>Файлы ресурсов</Filter>
+    </None>
+  </ItemGroup>
 </Project>
