--- a/CALENDAR/CALENDAR.vcxproj.filters
+++ b/CALENDAR/CALENDAR.vcxproj.filters
@@ -35,6 +35,9 @@
     <ClInclude Include="MenuCalendar.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Function.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Base.bin">
